# scanmenow

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE-NOTES.md  BI-TEMPORAL-PROGRESS-TRACKING.md  GROUP-C-CORPUS-SPEC.md  backlog-archive.json  backlog.json  benchmark_thresholds.json  hipaa_coverage.json
docs/registries/: README.md  cli-commands.md  entity-types.md  env-vars.md  firestore-collections.md  tables.md
scripts/: audit_hipaa_coverage.py  download_models.py
src/scanmenow/: __init__.py  cli.py
src/scanmenow/cloud/: __init__.py  client.py  repository.py
src/scanmenow/detection/: __init__.py  analyzer.py  anonymizer.py  ner.py
src/scanmenow/detection/recognizers/: __init__.py  account.py  beneficiary.py  biometric.py  device.py  license.py  mrn.py  vehicle.py
src/scanmenow/retention/: __init__.py  evaluator.py  policy.py
src/scanmenow/storage/: __init__.py  base.py  db.py  models.py  repository.py
tests/: conftest.py  test_cli.py  test_cloud.py  test_detection.py  test_hipaa_recognizers.py  test_repository_protocol.py  test_retention.py  test_storage.py
