[project]
name = "scanmenow"
version = "0.1.1"
description = "Data governance platform for discovering, reducing, and managing sensitive data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
    # --- Document text extraction (Task #4 benchmark runner + Task #5 filesystem walker) ---
    "python-docx>=1.1.0",       # .docx (Word Open XML)
    "openpyxl>=3.1.0",          # .xlsx (Excel Open XML)
    "xlrd>=2.0.1",              # .xls (Excel legacy binary — read-only)
    "python-pptx>=0.6.23",      # .pptx (PowerPoint Open XML)
    "pdfplumber>=0.11.0",       # .pdf with text layer
    # --- OCR (Task #5 filesystem walker — image files + scanned PDFs) ---
    "pytesseract>=0.3.10",      # Tesseract OCR wrapper; requires Tesseract system install
    "pillow>=10.0.0",           # Image handling (required by pytesseract)
    "pdf2image>=1.17.0",        # Scanned PDF → image pages; requires Poppler system install
    "pdfminer-six>=20251230",   # PDF text extraction fallback
    # NOTE — system installs required (not Python packages):
    #   Tesseract OCR  : https://github.com/tesseract-ocr/tesseract
    #   Poppler        : https://poppler.freedesktop.org  (for pdf2image)
    #   LibreOffice ≥7.4: https://www.libreoffice.org    (for .doc legacy extraction)
]

[project.optional-dependencies]
# Install cloud extras to enable Firestore backend:
#   pip install scanmenow[cloud]
cloud = [
    "google-cloud-firestore>=2.16",
]

[project.scripts]
scanmenow = "scanmenow.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scanmenow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
